tests/Jroc.Test262.Tests/built-ins/Error/JavaScript/prototype/S15.11.4_A2.js
Error.prototype.toString = Object.prototype.toString;
var __tostr = Error.prototype.toString();

assert.sameValue(__tostr, "[object Object]", 'The value of __tostr is expected to be "[object Object]"');

